--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
             const constraints = {
                 audio: false,
-                video: true,
-                facingMode: { 
-                    exact: 'environment' 
+                video: { 
+                    facingMode: { 
+                        exact: 'environment' 
+                    }
                 }
             }
 
