--- a/index.html
+++ b/index.html
@@ -9,19 +9,37 @@
                 padding: 0;
             }
 
-            video {
+            .custom-video-container {
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+
+            .custom-video-size {
                 width: 100%;
-                height: 50rem;
+                height: 100%;
+                object-fit: cover;
+                z-index: 0;
+            }
+
+            @media screen and (orientation: portrait) {
+                .custom-video-container {
+                    width: 100%;
+                    height: 100%; 
+                }
             }
         </style>
         <title>Camera</title>
     </head>
     <body>
-        <video id="video" playsinline autoplay></video>
+        <div class="custom-video-container">
+            <video id="video" class="custom-video-size" playsinline autoplay></video>
+        </div>
     
         <script>
             'use strict';
-            alert('edit 2');
+
+            alert('edit 3');
 
             const video = document.getElementById('video');
 
