--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <script>
             'use strict';
 
-            alert('edit 5');
+            alert('edit 6');
 
             const frame = document.getElementById('video');
             const context = document.getElementById('context');
@@ -126,7 +126,7 @@
                 // let savedHeight = (height*savedWidth) / width;
 
                 context.style.display = 'block';
-                context.getContext('2d').drawImage(frame, 0, 0, context.width, context.height);
+                context.getContext('2d').drawImage(frame, 0, 0);
 
                 captureFrame.href = context.toDataURL('image/png');
                 captureFrame.download= "foot.png";
