--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             const captureFrame = document.getElementById('captureButton');
 
             captureFrame.addEventListener('click', () => {
-                context.width = 720 + 900;
-                context.height = ((context.width * window.screen.availHeight) / window.screen.availWidth) + 900
+                context.width = 720 + 5000;
+                context.height = ((context.width * window.screen.availHeight) / window.screen.availWidth) + 5000
 
                 context.style.display = 'block';
-                context.getContext('2d').drawImage(frame, 450, 0, (frame.videoWidth-500), (frame.videoHeight+200), 0, 0,  context.width, context.height);
+                context.getContext('2d').drawImage(frame, 450, 0, (frame.videoWidth-900), frame.videoHeight, 0, 0,  context.width, context.height);
 
                 captureFrame.href = context.toDataURL('image/png');
                 captureFrame.download= "foot.png";
